# Live-LOSSAMBO

./: .dockerignore  .gitignore  .railwayignore  Dockerfile  RAILWAY_SETUP.md  README.md  TODO.md  app.py  build.sh  lance_site.bat  main.py  nixpacks.toml  package.json  pyproject.toml  railpack.json  railway.json  requirements.txt  run_backend.bat  start.sh
backend/: .env.example  README.md  TODO_DB_DEV.md  app.py  models.py  promote_admin_fix.py  pyproject.toml  railway.json  requirements.txt  set_admin.py  start.sh
backend/migrations/: README-MANUAL.md  README.md  env.py
backend/routes/: admin.py  auth.py  events.py  gallery.py  members.py  pages.py  production.py  shop.py
backend/templates/: admin.html  admin_login.html  auth.html  base.html  events.html  home.html  members.html  messages.html  production.html  shop.html
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  debugHealth.ts
frontend/src/auth/: useAuth.tsx
frontend/src/pages/: Admin.tsx  Auth.tsx  Events.tsx  Home.tsx  Members.tsx  Messages.tsx  Production.tsx  Shop.tsx
frontend/src/pages/admin/: AdminEvents.tsx  AdminGallery.tsx  AdminMembers.tsx  AdminNotifications.tsx  AdminRequests.tsx  AdminServices.tsx  AdminShopItems.tsx
frontend/src/shared/: NavBar.tsx
